# common/model/model.go
@@ -5,39 +5,35 @@ import (
 )
 
 type User struct {
-	Id                   int       `gorm:"primaryKey;autoIncrement"`
-	isAdmin              bool      `gorm:"not null;default:false" json:"-"`
-	Birthday             string    `gorm:"size:40;not null"`
-	DeviceID             string    `gorm:"size:40;not null"`
-	Gender               bool      `gorm:"not null"`
-	FCMToken             string    `gorm:"size:255;not null"`
-	IsFirst              bool      `gorm:"not null;default:true"`
-	Name                 string    `gorm:"size:40;not null"`
-	PhoneNum             string    `gorm:"size:40;not null"`
-	UseAutoLogin         bool      `gorm:"not null;default:false"`
-	UsePrivacyProtection bool      `gorm:"not null;default:false"`
-	UseSleepTracking     bool      `gorm:"not null;default:false"`
-	UserType             string    `gorm:"size:40;not null"`
-	Email                string    `gorm:"size:40;not null"`
-	Created              time.Time `gorm:"type:datetime;default:CURRENT_TIMESTAMP" json:"-"`
-	Updated              time.Time `gorm:"type:datetime;default:CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP" json:"-"`
-}
-
-func (u *User) IsAdmin() bool { // json: "-" 하면됨
-	return u.isAdmin
+	Id                   int       `gorm:"primaryKey;autoIncrement" json:"id"`
+	IsAdmin              bool      `gorm:"not null;default:false" json:"-"`
+	Birthday             string    `gorm:"size:40;not null" json:"birthday"`
+	DeviceID             string    `gorm:"size:40;not null" json:"device_id"`
+	Gender               bool      `gorm:"not null" json:"gender"`
+	FCMToken             string    `gorm:"size:255;not null" json:"fcm_token"`
+	IsFirst              bool      `gorm:"not null;default:true" json:"is_first"`
+	Name                 string    `gorm:"size:40;not null" json:"name"`
+	PhoneNum             string    `gorm:"size:40;not null" json:"phone_num"`
+	UseAutoLogin         bool      `gorm:"not null;default:false" json:"use_auto_login"`
+	UsePrivacyProtection bool      `gorm:"not null;default:false" json:"user_privacy_protection"`
+	UseSleepTracking     bool      `gorm:"not null;default:false" json:"use_sleep_tracking"`
+	UserType             string    `gorm:"size:40;not null" json:"user_type"`
+	Email                string    `gorm:"size:40;not null" json:"email"`
+	Created              time.Time `gorm:"type:datetime;default:CURRENT_TIMESTAMP" json:"created"`
+	Updated              time.Time `gorm:"type:datetime;default:CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP" json:"updated"`
 }
 
 type Alarm struct {
-	Id        int       `gorm:"primaryKey;autoIncrement"`
-	Uid       int       `gorm:"not null"`
-	Type      string    `gorm:"size:255;not null"`
-	Body      string    `gorm:"type:text;not null"`
-	StartAt   string    `gorm:"size:255;not null"`
-	EndAt     string    `gorm:"size:255;not null"`
-	Timestamp string    `gorm:"size:255;not null"`
-	Week      string    `gorm:"size:255;not null"`
-	Created   time.Time `gorm:"type:datetime;default:CURRENT_TIMESTAMP" json:"-"`
-	Updated   time.Time `gorm:"type:datetime;default:CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP" json:"-"`
+	Id        int       `gorm:"primaryKey;autoIncrement" json:"id"`
+	Uid       int       `gorm:"not null" json:"uid"`
+	Type      string    `gorm:"size:255;not null" json:"type"`
+	Body      string    `gorm:"type:text;not null" json:"body"`
+	StartAt   string    `gorm:"size:255;not null" json:"start_at"`
+	EndAt     string    `gorm:"size:255;not null" json:"end_at"`
+	Timestamp string    `gorm:"size:255;not null" json:"timestamp"`
+	Week      string    `gorm:"size:255;not null" json:"week"`
+	Created   time.Time `gorm:"type:datetime;default:CURRENT_TIMESTAMP" json:"created"`
+	Updated   time.Time `gorm:"type:datetime;default:CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP" json:"updated"`
 }
 
 type Notification struct {
@@ -45,29 +41,30 @@ type Notification struct {
 	Uid     int       `gorm:"not null"`
 	Type    string    `gorm:"size:40;not null"`
 	Body    string    `gorm:"type:text;not null"`
-	IsRead  bool      `gorm:"not null;default:false"`
+	IsRead  bool      `gorm:"not null;default:false" json:"is_read"`
 	Created time.Time `gorm:"type:datetime;default:CURRENT_TIMESTAMP" json:"-"`
 	Updated time.Time `gorm:"type:datetime;default:CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP" json:"-"`
 }
 
 type Inquire struct {
-	Id      int       `gorm:"primaryKey;autoIncrement"`
-	Uid     int       `gorm:"not null"` //user 아이디
-	Email   string    `gorm:"size:40;not null"`
-	Title   string    `gorm:"size:255;not null"`
-	Content string    `gorm:"type:text;not null"`
-	Created time.Time `gorm:"type:datetime;default:CURRENT_TIMESTAMP" json:"-"`
-	Updated time.Time `gorm:"type:datetime;default:CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP" json:"-"`
+	Id      int            `gorm:"primaryKey;autoIncrement" json:"id"`
+	Uid     int            `gorm:"not null" json:"uid"` //user 아이디
+	Email   string         `gorm:"size:40;not null" json:"email"`
+	Title   string         `gorm:"size:255;not null" json:"title"`
+	Content string         `gorm:"type:text;not null" json:"content"`
+	Created time.Time      `gorm:"type:datetime;default:CURRENT_TIMESTAMP" json:"created"`
+	Updated time.Time      `gorm:"type:datetime;default:CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP" json:"updated"`
+	Replies []InquireReply `gorm:"foreignKey:InquireId" json:"replies"`
 }
 
 type InquireReply struct {
-	Id        int       `gorm:"primaryKey;autoIncrement"`
-	Uid       int       `gorm:"not null"`
-	InquireId int       `gorm:"not null"`
-	Content   string    `gorm:"type:text;not null"`
-	ReplyType bool      `gorm:"not null"`
-	Created   time.Time `gorm:"type:datetime;default:CURRENT_TIMESTAMP" json:"-"`
-	Updated   time.Time `gorm:"type:datetime;default:CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP" json:"-"`
+	Id        int       `gorm:"primaryKey;autoIncrement" json:"id"`
+	Uid       int       `gorm:"not null" json:"uid"`
+	InquireId int       `gorm:"not null" json:"inquire_id"`
+	Content   string    `gorm:"type:text;not null" json:"content"`
+	ReplyType bool      `gorm:"not null" json:"reply_type"`
+	Created   time.Time `gorm:"type:datetime;default:CURRENT_TIMESTAMP" json:"created"`
+	Updated   time.Time `gorm:"type:datetime;default:CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP" json:"updated"`
 }
 
 type BasicResponse struct {
@@ -75,7 +72,7 @@ type BasicResponse struct {
 }
 
 type LoginRequest struct {
-	IdToken string `json:"idToken"`
+	IdToken string `json:"id_token"`
 	User    User   `json:"user"`
 }
 
