# inquire-service/transport/swagger-model.go
@@ -5,40 +5,41 @@ import (
 )
 
 type User struct {
-	ID                   int       `gorm:"primaryKey;autoIncrement"  example:"1"`
-	Birthday             string    `gorm:"size:40;default:''" example:"yyyy-mm-dd"`
-	DeviceID             string    `gorm:"size:40;default:''"`
-	Gender               bool      `gorm:"size:10;default:''"`
-	FCMToken             string    `gorm:"size:255;default:''" json:"fcm_token"`
-	IsFirst              bool      `gorm:"default:false"`
-	Name                 string    `gorm:"size:40;default:''"`
-	PhoneNum             string    `gorm:"size:40;default:''" json:"phone_num"`
-	UseAutoLogin         bool      `gorm:"default:false"`
-	UsePrivacyProtection bool      `gorm:"default:false"`
-	UseSleepTracking     bool      `gorm:"default:false"`
-	UserType             string    `gorm:"size:40;default:''"`
-	Email                string    `gorm:"size:40;default:''"`
-	Created              time.Time `gorm:"type:datetime;default:CURRENT_TIMESTAMP"`
-	Updated              time.Time `gorm:"type:datetime;default:CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP"`
+	ID                   int       `gorm:"primaryKey;autoIncrement" json:"id" example:"1"`
+	Birthday             string    `gorm:"size:40;default:''" json:"birthday" example:"yyyy-mm-dd"`
+	DeviceID             string    `gorm:"size:40;not null" json:"device_id"`
+	Gender               bool      `gorm:"not null" json:"gender"`
+	FCMToken             string    `gorm:"size:255;not null" json:"fcm_token"`
+	IsFirst              bool      `gorm:"not null;default:true" json:"is_first"`
+	Name                 string    `gorm:"size:40;not null" json:"name"`
+	PhoneNum             string    `gorm:"size:40;not null" json:"phone_num"`
+	UseAutoLogin         bool      `gorm:"not null;default:false" json:"use_auto_login"`
+	UsePrivacyProtection bool      `gorm:"not null;default:false" json:"user_privacy_protection"`
+	UseSleepTracking     bool      `gorm:"not null;default:false" json:"use_sleep_tracking"`
+	UserType             string    `gorm:"size:40;not null" json:"user_type"`
+	Email                string    `gorm:"size:40;default:''" json:"email"`
+	Created              time.Time `gorm:"type:datetime;default:CURRENT_TIMESTAMP" json:"created"`
+	Updated              time.Time `gorm:"type:datetime;default:CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP" json:"updated"`
 }
 
 type Inquire struct {
-	Id      int       `gorm:"primaryKey;autoIncrement"`
-	Uid     int       `gorm:"not null"` //user 아이디
-	Email   string    `gorm:"size:40;not null"`
-	Title   string    `gorm:"size:255;not null"`
-	Content string    `gorm:"type:text;not null"`
-	Created time.Time `gorm:"type:datetime;default:CURRENT_TIMESTAMP" json:"-"`
-	Updated time.Time `gorm:"type:datetime;default:CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP" json:"-"`
+	Id      int       `gorm:"primaryKey;autoIncrement" json:"id"`
+	Uid     int       `gorm:"not null" json:"uid"` //user 아이디
+	Email   string    `gorm:"size:40;not null" json:"email"`
+	Title   string    `gorm:"size:255;not null" json:"title"`
+	Content string    `gorm:"type:text;not null" json:"content"`
+	Created time.Time `gorm:"type:datetime;default:CURRENT_TIMESTAMP" json:"created"`
+	Updated time.Time `gorm:"type:datetime;default:CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP" json:"updated"`
 }
 
 type InquireReply struct {
-	ID        int  `gorm:"primaryKey;autoIncrement"`
-	UID       int  //user 아이디
-	InquireId int  // Inquire 아이디
-	Type      bool //답변 또는 추가 문의
-	Content   string
-	Date      time.Time
+	Id        int       `gorm:"primaryKey;autoIncrement" json:"id"`
+	Uid       int       `gorm:"not null" json:"uid"`
+	InquireId int       `gorm:"not null" json:"inquire_id"`
+	Content   string    `gorm:"type:text;not null" json:"content"`
+	ReplyType bool      `gorm:"not null" json:"reply_type"`
+	Created   time.Time `gorm:"type:datetime;default:CURRENT_TIMESTAMP" json:"created"`
+	Updated   time.Time `gorm:"type:datetime;default:CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP" json:"updated"`
 }
 
 type SuccessResponse struct {
